--- a/project/todo.txt
+++ b/project/todo.txt
@@ -1,1 +1,5 @@
-- add MAXHERD and MAXPRIDWE (after spawning we have to many mouths to satisfy! all will eventually die), alternatively, add a phase where low social attitude component leave the group
+Nello
+- improve carviz life and check why they don't get to live that much
+- store statistics in environment
+- my report part
+- my slides part
