added self.statistics, look at it in the class environment, it gets updated trough self.computeStatistics() except for hunt and succHunt that are obtained in self.hunt() and passed to the function

--- a/project/todo.txt
+++ b/project/todo.txt
@@ -1,5 +1,5 @@
 Nello
-- improve carviz life and check why they don't get to live that much
-- store statistics in environment
 - my report part
 - my slides part
+
+- too many carviz in 1 pride
